# Voyager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Voyager Coding Standard.md  Voyager_Coding_Standard.md
Voyager/: CMakeLists.txt  README.md
Voyager/Contrib/glad/: CMakeLists.txt
Voyager/Contrib/glad/include/glad/: glad.h
Voyager/Contrib/glad/src/: glad.c
Voyager/Contrib/imgui/: CMakeLists.txt
Voyager/Contrib/imgui/examples/: imgui_impl_glfw.cpp
Voyager/ProjectFiles/Engine/: Engine.sln
Voyager/ProjectFiles/Engine/Core/: Core.vcxproj
Voyager/ProjectFiles/Engine/Core/DebugTools/Profiling/: Profiler.cpp
Voyager/ProjectFiles/Engine/Core/Timing/: Clock.cpp
Voyager/ProjectFiles/Engine/Graphics/: GlWindow.cpp  GlWindow_moc.cpp  Graphics.vcxproj
Voyager/ProjectFiles/Engine/Includes/Core/Misc/: TypeDefs.h
Voyager/ProjectFiles/Engine/Includes/Core/Timing/: Clock.h
Voyager/ProjectFiles/Engine/Includes/Graphics/: GlWindow.h
Voyager/ProjectFiles/Engine/Includes/Graphics/Window/: GlWindow.h
Voyager/ProjectFiles/Engine/Includes/Math/: Constants.h
Voyager/ProjectFiles/Engine/Includes/Math/Matrix/: Matrix2D.h  Matrix2D.inl  Matrix3D.h  (+1 more)
Voyager/ProjectFiles/Engine/Includes/Testing/: TestingHelper.h
Voyager/ProjectFiles/Engine/Math/: Math.vcxproj  Math.vcxproj.filters
Voyager/ProjectFiles/Engine/SandboxGame/: SandboxGame.cpp  SandboxGame.vcxproj  SandboxGame.vcxproj.filters  profiles.csv
Voyager/ProjectFiles/Engine/Testing/: ClockTests.cpp  ProfileTests.cpp  Testing.vcxproj  gtest_example.cpp  main.cpp  profiles.csv
Voyager/ProjectFiles/Engine/Testing/MathTests/: Matrix2DTests.cpp  Matrix3DTests.cpp  Vector2DTests.cpp  Vector3DTests.cpp
Voyager/Source/: Voyager.h  pch.h
Voyager/Source/Platform/: APIType.h  BasicTypes.h
Voyager/Source/Platform/OpenGL/: OpenGLAssert.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLProgram.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderset.cpp  OpenGLShaderset.h  OpenGLStatus.cpp  OpenGLStatus.h  OpenGLTexture.cpp  OpenGLTransform.cpp  OpenGLTransform.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Voyager/Source/Platform/Renderer/: HardwareInfo.h  RendererAPIHandler.cpp  RendererAPIHandler.h
Voyager/Source/Platform/Renderer/DirectX12/: DXHelper.h  DirectX12Context.cpp  DirectX12Context.h  DirectX12FeatureSupport.h
Voyager/Source/Platform/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderset.cpp  OpenGLShaderset.h  OpenGLStatus.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTransform.cpp  OpenGLTransform.h  OpenGLVertexArray.cpp
Voyager/Source/Platform/Window/: Win32Window.cpp  Win32Window.h  WindowAPIHandler.cpp  WindowAPIHandler.h  WindowsInput.cpp  WindowsInput.h
Voyager/Source/Platform/Window/GLFW/: GLFWHandler.cpp  GLFWHandler.h  GLFWInput.cpp  GLFWInput.h
Voyager/Source/Platform/Window/WIN/: Win32Handler.cpp  Win32Handler.h
Voyager/Source/Platform/Window/WinAPI/: Win32BaseWindow.h  Win32Handler.cpp  Win32Handler.h  Win32Input.cpp  Win32Input.h
Voyager/Source/Voyager/Components/: Geometry.h  Material.h  Transform.h  material_1.h
Voyager/Source/Voyager/Core/: Application.cpp  Application.h  Bitmask.h  ComponentArray.h  ComponentManager.h  Core.h  EntityManager.h  Entrypoint.h  IComponentManager.cpp  IComponentManager.h  IEntityManager.cpp  IEntityManager.h  ISystemManager.cpp  ISystemManager.h  IWindow.cpp  IWindow.h  Input.cpp  Input.h  KeyCodes.h  KeyTable.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Resource.h  ResourceManager.h  System.h  SystemManager.h  Timer.cpp  Timer.h  Timestep.h  Timing.h  Types.h  Window.h
Voyager/Source/Voyager/Event/: ApplicationEvent.h  ComponentEvent.h  Dispatcher.h  EntityEvent.h  Event.h  FileEvent.h  IDispatcher.cpp  IDispatcher.h  KeyEvent.h  MouseEvent.h  Observer.h
Voyager/Source/Voyager/Geometry/: GeometryData.h  GeometryGenerator.cpp  GeometryGenerator.h
Voyager/Source/Voyager/IO/: FileNotifier.h  ImportSettings.h  JSONParser.cpp  JSONParser.h  OBJParser.cpp  OBJParser.h  Parsing.cpp  Parsing.h
Voyager/Source/Voyager/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Voyager/Source/Voyager/Image/: ImageData.h
Voyager/Source/Voyager/Math/: Constants.h  Utils.h  Utils.inl
Voyager/Source/Voyager/Math/Matrix/: Base.h  Matrix2D.h  Matrix2D.inl  Matrix2DH.h  Matrix2DH.inl  Matrix2x2.h  Matrix2x2.inl  Matrix2x2H.h  Matrix2x2H.inl  Matrix3D.h  Matrix3D.inl  Matrix3x3.h  Matrix3x3.inl  Matrix4D.h  Matrix4D.inl  Matrix4x4.h  Matrix4x4.inl  MatrixLayout.h
Voyager/Source/Voyager/Math/Vector/: Base.h  Descriptor.h  Rotation.h  Vector2.h  Vector2.inl  Vector2D.h  Vector2D.inl  Vector3.h  Vector3.inl  Vector3D.h  Vector3D.inl  Vector4.h  Vector4.inl  Vector4D.h  Vector4D.inl  VectorLayout.h  YawPitchRoll.h
Voyager/Source/Voyager/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Geometry.cpp  Geometry.h  GraphicsContext.h  Identifier.cpp  Identifier.h  Material.cpp  Material.h  OrtographicCamera.cpp  OrtographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderFlags.h  RenderJob.cpp  RenderJob.h  RenderSettings.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererAPIHandler.cpp  RendererAPIHandler.h  Shader.cpp  Shader.h  Shaderset.cpp  Shaderset.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
Voyager/Source/Voyager/Renderer/Material/: Standard.h
VoyagerIG/: CMakeLists.txt  README.md  VoyagerIG.ini
VoyagerIG/Config/: Shadersets.json  Views.json
VoyagerIG/Source/VoyagerIG/: Scene.cpp  Scene.h  VoyagerIG.cpp  VoyagerIG.h
VoyagerIG/Source/VoyagerIG/Layers/: RenderLayer.cpp  RenderLayer.h  ResourceLayer.cpp  ResourceLayer.h  SceneLayer.cpp  SceneLayer.h
VoyagerIG/Source/VoyagerIG/Systems/: RenderSystem.cpp  RenderSystem.h
(+88 files in other folders)
